compiling_error.txt
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:8:1: error: 'main' must return 'int'
void main(void) {
^~~~
int
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:15:26: error: expected expression
  } while(/* condition */);
                         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:19:20: error: use of undeclared identifier 'setw'; did you mean 'getw'?
      std::cout << setw(10) << " "<<"What conversion would you like to make" << '\n';
                   ^~~~
                   getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:19:25: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
      std::cout << setw(10) << " "<<"What conversion would you like to make" << '\n';
                        ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:20:20: error: use of undeclared identifier 'setw'; did you mean 'getw'?
      std::cout << setw(20) << "" << "1. Celsius to Farenheight" << '\n';
                   ^~~~
                   getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:20:25: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
      std::cout << setw(20) << "" << "1. Celsius to Farenheight" << '\n';
                        ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:21:20: error: use of undeclared identifier 'setw'; did you mean 'getw'?
      std::cout << setw(20)<< " " << "2.Farenheight to Celsius" << '\n';
                   ^~~~
                   getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:21:25: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
      std::cout << setw(20)<< " " << "2.Farenheight to Celsius" << '\n';
                        ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:33:35: error: use of undeclared identifier 'setw'; did you mean 'getw'?
          default: { std::cout << setw(10) <<"" << "you must enter 1 or 2" << '\n';}
                                  ^~~~
                                  getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:33:40: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
          default: { std::cout << setw(10) <<"" << "you must enter 1 or 2" << '\n';}
                                       ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:36:19: error: use of undeclared identifier 'setw'; did you mean 'getw'?
      std::cout <<setw(10)<< "Do you wish to do another conversion Y ot N" << '\n';
                  ^~~~
                  getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:36:24: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
      std::cout <<setw(10)<< "Do you wish to do another conversion Y ot N" << '\n';
                       ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:46:10: warning: multi-character character constant [-Wmultichar]
  system('CLS');
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:46:3: error: no matching function for call to 'system'
  system('CLS');
  ^~~~~~
/usr/include/stdlib.h:187:6: note: candidate function not viable: no known conversion from 'int' to 'const char *' for 1st argument
int      system(const char *) __DARWIN_ALIAS_C(system);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:54:23: error: use of undeclared identifier 'setw'; did you mean 'getw'?
  std::cout << endl<< setw(10) << " " << temp <<" degrees celcius is"<< fahrenheit<<
                      ^~~~
                      getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:54:28: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
  std::cout << endl<< setw(10) << " " << temp <<" degrees celcius is"<< fahrenheit<<
                           ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:54:16: error: use of undeclared identifier 'endl'; did you mean 'std::endl'?
  std::cout << endl<< setw(10) << " " << temp <<" degrees celcius is"<< fahrenheit<<
               ^~~~
               std::endl
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/ostream:1001:1: note: 'std::endl' declared here
endl(basic_ostream<_CharT, _Traits>& __os)
^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:63:16: error: use of undeclared identifier 'setw'; did you mean 'getw'?
  std::cout << setw(10) << "Enter the temperature in whole degree fahrenheit" << '\n';
               ^~~~
               getw
/usr/include/stdio.h:389:6: note: 'getw' declared here
int      getw(FILE *);
         ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:63:21: error: cannot initialize a parameter of type 'FILE *' (aka '__sFILE *') with an rvalue of type 'int'
  std::cout << setw(10) << "Enter the temperature in whole degree fahrenheit" << '\n';
                    ^~
/usr/include/stdio.h:389:17: note: passing argument to parameter here
int      getw(FILE *);
                    ^
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:66:3: error: use of undeclared identifier 'celsius'; did you mean 'celcius'?
  celsius = ((temp - 32)*5) / 9;
  ^~~~~~~
  celcius
/Users/jizelle/code/c++/algorithms/example1/algorithms.cpp:61:13: note: 'celcius' declared here
  int temp, celcius;
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
1 warning and 20 errors generated.
